hphp/test/zend/bad/Zend/tests/const_dereference_002.php
<?php
error_reporting(E_ALL);

var_dump("foobar"[3]);
var_dump("foobar"[2][0]);
var_dump("foobar"["foo"]["bar"]);
